<resources>
    <string name="app_name">AnimTest</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World section: %1$d</string>
    <string name="animate">Animate</string>
    <string name="animation_duration">Duration %dms</string>
    <string name="reset">Reset</string>
    <string name="alpha">alpha</string>
    <string name="rotate">rotate</string>
    <string name="scale">scale</string>
    <string name="translate">translate</string>
    <string name="set">set</string>
</resources>
